# Hypergraph_Encodings

./: README.md  curvatures.py  len_hg_encodings.py  pyproject.toml  rook_graph.g6  run_all.sh  run_all_ablation.sh  run_all_ablation_2.sh  run_all_ablation_3.sh  run_all_encodings_brec.sh  run_all_general.sh  run_all_general_parallel.sh  run_all_hg_classification.sh  run_all_hg_classification_parallel.sh  run_all_regular.sh  run_lukas.sh  setup.py
.github/workflows/: mypy.yml  pylint.yml  pytest.yml  python-package.yml  ruff.yml
BREC_Data/: notes.txt
bash_interface/: brec_local.sh  run_all_encodings_brec.sh  run_all_general_parallel.sh  run_save_encodings.sh
bash_interface/cluster/: run_all_general_parallel.sh  run_save_encodings.sh
computed_encodings/: reddit_hypergraphs_rw_encodings_EE_k_20_normalized_True.pkl
data/: notes.txt
data/Rook_Shrikhande/: shrikhande.g6
data/hypergraph_classification_datasets/: enzymes_hypergraphs.pickle  enzymes_hypergraphs_with_encodings_orc.pickle  imdb_hypergraphs.pickle  imdb_hypergraphs_with_encodings_orc.pickle  mutag_hypergraphs.pickle  mutag_hypergraphs_with_encodings_orc.pickle  proteins_hypergraphs.pickle  proteins_hypergraphs_with_encodings_orc.pickle
docs/: adding_encodings_to_your_data.md
example_notebooks/: data_folder.ipynb  example.ipynb  from encodings_hnns.py
scripts/: analyse_brec.py  brec_dataset.py  combine_results.py  config.py  create_results_table.py  process_lrgb_datasets.py  run_hg_classification.py  split_data_for_hypergraph_classification.py  theorem_isomorphisms_lifted.py  theorems_isomoprhims.py  train_val.py
scripts/brec/: analyse_brec.py  brec_dataset.py  theorem_isomorphisms_lifted.py  theorems_isomoprhims.py
scripts/compute_encodings/: base_class.py  compute_and_save_encodings.py  compute_and_save_encodings_cc_ca.py  encoding_saver_hgraphs.py  encoding_saver_lrgb.py
scripts/gnn/: hyperparams.py  run_graph_classification.py  run_graph_regression.py  run_node_classification.py
scripts/unignn/: train_val.py
src/animations/: little_hypergraph_rw_animation.py  little_random_walks_animation.py
src/brec_analysis/: add_encodings.py  analyse_brec_categories.py  categories_to_check.py  check_encodings_same.py  compare_encodings_wrapper.py  encodings_to_check.py  isomorphism_mapping.py  laplacians_specific_functions.py  match_encodings.py  match_status.py  parse_click_args.py  plotting_encodings_for_brec.py  plotting_for_brec.py  plotting_graphs_and_hgraphs_for_brec.py  printers_and_loggers.py  southern_orc_example.py  (+2 more)
tests/: test_calculate_vertex_edges.py  test_curvature.py  test_encodings.py  test_encodings_2.py  test_laplacians.py  test_laplacians_2.py  test_laplacians_3.py  test_unigcn_conv.py  test_unignn.py  test_utils.py
(+74 files in other folders)
