[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "torch>=2.0.0",  # Required for building torch-scatter
]
build-backend = "setuptools.build_meta"

[project]
name = "encodings_hnns"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    # Base requirements
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "shapely",
    "tabulate",
    "path",
    "brec",
    "imageio",
    "imageio-ffmpeg",
    "POT",  # Python Optimal Transport library
    # PyTorch ecosystem
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "torch-scatter>=2.1.1",
    "torch-sparse>=0.6.17",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pandas-stubs",
    "types-python-dateutil",
    "pydocstyle",
    "black",
    "isort",
    "docformatter",
    "ruff",
    "pylint",
]
test = [
    "pytest",
    "coverage",
    "pytest-cov",
    "pytest-random-order",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"], include = ["encodings_hnns*"]}}
package-data = {"*" = ["py.typed"]}

[tool.ruff]
line-length = 88
target-version = "py310" 