[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "torch>=2.0.0",  # Required for building torch-scatter
]
build-backend = "setuptools.build_meta"

[project]
name = "encodings_hnns"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    # Base requirements
    "numpy",
    "pandas",
    "hypernetx @ git+https://github.com/RaphaelPellegrin/HyperNetX.git@nonconvex",
    "numba",
    "fastjsonschema",
    "matplotlib",
    "scipy",
    "shapely",
    "tabulate",
    "path",
    "brec",
    "imageio",
    "imageio-ffmpeg",
    "POT",  # Python Optimal Transport library
    # PyTorch ecosystem
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "torch-scatter>=2.1.1",
    "torch-sparse>=0.6.17",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pandas-stubs",
    "types-python-dateutil",
    "pydocstyle",
    "black",
    "isort",
    "docformatter",
    "ruff",
    "pylint",
]
test = [
    # Testing frameworks
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-random-order>=1.1.0",
    "coverage>=7.0.0",
    # Core dependencies with exact versions
    "numpy==1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    # PyTorch ecosystem with exact versions
    "torch==2.0.0",
    "torch-geometric==2.3.0",
    "torch-scatter==2.1.1",
    "torch-sparse==0.6.17",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"], include = ["encodings_hnns*"]}}
package-data = {"*" = ["py.typed"]}

[tool.ruff]
line-length = 88
target-version = "py310" 